fix z-index for buttons

--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -11,4 +11,9 @@
   font-size: 19px;
   font-family: "alegreya-sans-extrabold";
   line-height: 1.5rem; //надпись чуть ниже
+  z-index: 100;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
