--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -2,7 +2,7 @@
   position: absolute;
   display: block;
   width: 980px;
-  z-index: 100;
+  z-index: 0;
   margin-top: 0.42rem;
   // margin: 0 auto;
   top: rem(12px);
