--- a/css/blocks/pagination.scss
+++ b/css/blocks/pagination.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 33%;
   right: 3%;
-  z-index: 2;
+  z-index: 100;
 }
 
 .pagination__dot {
